<resources>
    <string name="app_name">Money Manager</string>
    <string name="currency"> zł</string>
    <string name="login">Logowanie</string>
    <string name="loginBtn">Zaloguj się</string>
    <string name="passwordHint">Hasło</string>
    <string name="emailHint">Email</string>
    <string name="dontHaveAnAccount">Nie masz konta?</string>
    <string name="register">Rejestracja</string>
    <string name="alreadyHaveAnAccount">Masz już konto?</string>
    <string name="registerBtn">Zarejestruj się</string>
    <string name="dashboard">Tablica</string>
    <string name="income">Przychód</string>
    <string name="expense">Wydatki</string>
    <string name="navigation_drawer_open">Otwórz pasek nawigacji</string>
    <string name="navigation_drawer_close">Zamknij pasek nawigacji</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount">Ilość:</string>
    <string name="type">Typ:</string>
    <string name="note">Notatka:</string>
    <string name="cancel">Anuluj</string>
    <string name="save">Zapisz</string>
    <string name="delete">Usuń</string>
    <string name="update">Zaktualizuj</string>
    <string name="logout">Wyloguj</string>

</resources>
