<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register"
                android:textAppearance="?android:textAppearanceLarge"
                android:padding="20dp"
                android:fontFamily="sans-serif"
                android:textSize="30sp"/>

            <EditText
                android:id="@+id/et_email_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:padding="15dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:layout_margin="10dp"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/et_password_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_background"
                android:padding="15dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:autofillHints="" />

            <Button
                android:id="@+id/btn_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button_background"
                android:padding="15dp"
                android:text="@string/registerBtn"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/alreadyHaveAnAccount"
                android:textSize="22sp" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>